Mention how to specify JVM args